--- a/services/videosurveillance-entrepot.html
+++ b/services/videosurveillance-entrepot.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="../css/navigation.css?v=2.0">
     <link rel="stylesheet" href="../css/videosurveillance.css">
     <link rel="stylesheet" href="../css/entrepot.css">
-    <link rel="stylesheet" href="../css/faq.css"> 
+    <link rel="stylesheet" href="../css/faq.css">
+    <link rel="stylesheet" href="../css/contact.css"> 
     <!-- Favicon -->
     <link rel="icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
@@ -505,66 +506,63 @@
     </section>
 
     <!-- FAQ Section -->
-    <section class="faq-section">
-        <div class="faq-container">
-            <div class="faq-header">
-                <h2 class="faq-title">Questions <span class="highlight-text">Fréquentes</span> Vidéosurveillance Entrepôt</h2>
-                <p class="faq-subtitle">Réponses aux questions les plus courantes sur l'installation de systèmes de surveillance dans les entrepôts</p>
-            </div>
+    <section class="contact-faq-section">
+        <div class="contact-faq-container">
+            <h2 class="section-title">Questions <span class="highlight-text">Fréquentes</span> Vidéosurveillance Entrepôt</h2>
             
-            <div class="faq-grid">
-                <details class="faq-item">
+            <div class="contact-faq-grid">
+                <details class="contact-faq-item">
                     <summary>Quel est le coût d'installation d'un système de vidéosurveillance pour entrepôt ?</summary>
-                    <div class="faq-content">
+                    <div class="contact-faq-content">
                         <p>Le coût varie selon la superficie de l'entrepôt, le nombre de caméras nécessaires et les fonctionnalités souhaitées. Pour un entrepôt standard de 1000m², comptez entre <strong>15 000€ et 35 000€</strong> incluant matériel, installation et configuration. Nous proposons un <strong>devis gratuit personnalisé</strong> après visite sur site.</p>
                     </div>
                 </details>
 
-                <details class="faq-item">
+                <details class="contact-faq-item">
                     <summary>Quelles sont les obligations légales pour la vidéosurveillance d'entrepôt ?</summary>
-                    <div class="faq-content">
+                    <div class="contact-faq-content">
                         <p>La surveillance d'entrepôt doit respecter la <strong>réglementation CNIL</strong> : déclaration préalable, information du personnel, limitation des zones filmées, conservation des données limitée à 30 jours maximum. Nous vous accompagnons dans toutes les démarches de <strong>conformité légale</strong>.</p>
                     </div>
                 </details>
 
-                <details class="faq-item">
+                <details class="contact-faq-item">
                     <summary>Combien de caméras faut-il pour surveiller efficacement un entrepôt ?</summary>
-                    <div class="faq-content">
+                    <div class="contact-faq-content">
                         <p>Le nombre dépend de la configuration de l'entrepôt. En moyenne, nous recommandons <strong>1 caméra tous les 200m²</strong> pour les zones de stockage et <strong>une couverture renforcée</strong> aux points critiques : accès, quais de chargement, zones de réception. Notre étude technique détermine le placement optimal.</p>
                     </div>
                 </details>
 
-                <details class="faq-item">
+                <details class="contact-faq-item">
                     <summary>Les caméras fonctionnent-elles dans l'obscurité totale des entrepôts ?</summary>
-                    <div class="faq-content">
+                    <div class="contact-faq-content">
                         <p>Oui, nos caméras <strong>ColorVu et infrarouge</strong> offrent une vision parfaite dans l'obscurité totale jusqu'à 40 mètres. Les technologies de <strong>vision nocturne couleur</strong> permettent une surveillance 24h/24 même sans éclairage artificiel.</p>
                     </div>
                 </details>
 
-                <details class="faq-item">
+                <details class="contact-faq-item">
                     <summary>Peut-on surveiller plusieurs entrepôts depuis un poste central ?</summary>
-                    <div class="faq-content">
+                    <div class="contact-faq-content">
                         <p>Absolument. Notre système permet la <strong>supervision multi-sites</strong> avec accès distant via internet sécurisé. Vous pouvez surveiller tous vos entrepôts depuis un <strong>poste de contrôle unique</strong> ou via application mobile, avec alertes en temps réel.</p>
                     </div>
                 </details>
 
-                <details class="faq-item">
+                <details class="contact-faq-item">
                     <summary>Quelle est la durée de conservation des enregistrements ?</summary>
-                    <div class="faq-content">
+                    <div class="contact-faq-content">
                         <p>La législation française impose une <strong>conservation maximum de 30 jours</strong>. Selon vos besoins et la capacité de stockage, nous configurons une durée adaptée entre 7 et 30 jours. Les systèmes de <strong>stockage cloud</strong> permettent une gestion automatisée.</p>
                     </div>
                 </details>
 
-                <details class="faq-item">
+                <details class="contact-faq-item">
                     <summary>L'installation perturbe-t-elle l'activité de l'entrepôt ?</summary>
-                    <div class="faq-content">
+                    <div class="contact-faq-content">
                         <p>Non, nous planifions l'installation pour <strong>minimiser les perturbations</strong>. Travaux effectués en dehors des heures d'activité ou par zones. Installation du câblage en hauteur pour ne pas gêner la circulation. <strong>Aucun arrêt de production</strong> nécessaire.</p>
                     </div>
                 </details>
 
-                <details class="faq-item">
+                <details class="contact-faq-item">
                     <summary>Quel type de maintenance est nécessaire pour les caméras d'entrepôt ?</summary>
-                    <div class="faq-content">
+                    <div class="contact-faq-content">
                         <p>Maintenance préventive <strong>2 fois par an</strong> : nettoyage des optiques, vérification des fixations, test des fonctionnalités. Dans l'environnement poussiéreux des entrepôts, un <strong>contrat de maintenance</strong> garantit le bon fonctionnement et prolonge la durée de vie du matériel.</p>
                     </div>
                 </details>
