--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         </video>
         <div class="hero-overlay"></div> <!-- Add this line for the overlay -->
         <div class="hero-content">
-            <h1 class="hero-title">Expert <span class="highlight-word">Vidéosurveillance</span> Montpellier & <span class="highlight-word">Hérault</span></h1>
+            <h1 class="hero-title">Installation <span class="highlight-word">Vidéosurveillance</span> Montpellier - Expert <span class="highlight-word">Caméras Sécurité</span> Hérault</h1>
             <p class="hero-subtitle">Protection vidéo complète pour votre maison ou entreprise. <strong>Plus de 500 clients protégés</strong>. Devis gratuit sous <span class="highlight-montpellier">24h</span>.</p>
             <div class="cta-buttons">
                 <a href="contact.html" class="main-cta">Demander un devis gratuit →</a>
@@ -1043,7 +1043,7 @@
                 </svg>
             </button>
             <div class="lightbox-image-container">
-                <img class="lightbox-image" src="" alt="Image de galerie vidéosurveillance en cours de chargement">
+                <img class="lightbox-image" src="" alt="Image de galerie vidéosurveillance en cours de chargement" loading="lazy">
                 <div class="lightbox-controls">
                     <button class="lightbox-prev" aria-label="Image précédente">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -1458,7 +1458,7 @@
             <button class="popup-close" aria-label="Fermer">&times;</button>
             
             <div class="popup-content">
-                <img src="images/Offre-zozosécurité/offr-installationvidéosurveillance-montpellier.webp" alt="Offre spéciale kit 4 caméras - Installation professionnelle" class="offer-image">
+                <img src="images/Offre-zozosécurité/offr-installationvidéosurveillance-montpellier.webp" alt="Offre spéciale kit 4 caméras - Installation professionnelle" class="offer-image" loading="lazy">
                 
                 <div class="countdown-timer">
                     <p class="timer-label">OFFRE LIMITÉE - SE TERMINE DANS :</p>
