--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -577,7 +577,7 @@
             <button class="popup-close" aria-label="Fermer">&times;</button>
             
             <div class="popup-content">
-                <img src="../images/Offre-zozosécurité/offr-installationvidéosurveillance-montpellier.webp" alt="Offre spéciale kit 4 caméras - Installation professionnelle" class="offer-image">
+                <img src="../images/Offre-zozosécurité/offr-installationvidéosurveillance-montpellier.webp" alt="Offre spéciale kit 4 caméras - Installation professionnelle" class="offer-image" loading="lazy">
                 
                 <div class="countdown-timer">
                     <p class="timer-label">OFFRE LIMITÉE - SE TERMINE DANS :</p>
