--- a/index.html
+++ b/index.html
@@ -1368,8 +1368,9 @@
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
         <div class="mobile-dropdown">
-            <a href="#services" class="nav-link mobile-dropdown-toggle">Services</a>
+            <button class="nav-link mobile-dropdown-toggle">Services</button>
             <div class="mobile-dropdown-menu">
+                <a href="services/videosurveillance.html" class="mobile-dropdown-item">Vidéosurveillance</a>
                 <a href="services/installateur-videosurveillance-entrepots-montpellier.html" class="mobile-dropdown-item">Surveillance Entrepôts</a>
             </div>
         </div>
