--- a/contact.html
+++ b/contact.html
@@ -110,6 +110,11 @@
         ],
         "openingHours": "Mo-Fr 08:00-18:00",
         "priceRange": "€€",
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": "43.6352",
+          "longitude": "3.9137"
+        },
         "hasOfferCatalog": {
           "@type": "OfferCatalog",
           "name": "Services de sécurité",
@@ -482,6 +487,34 @@
             <div class="contact-faq-cta">
                 <p>Vous avez d'autres questions ?</p>
                 <a href="faq.html" class="cta-button">Consultez notre FAQ complète →</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- SEO-Optimized Map Section for Installation Vidéosurveillance -->
+    <section class="contact-map-section" itemscope itemtype="https://schema.org/LocalBusiness">
+        <div class="contact-map-container">
+            <h3>Installation Vidéosurveillance <span class="highlight-location">Montpellier</span> - Notre Zone d'Intervention</h3>
+            <p class="map-description">Expert en installation vidéosurveillance dans l'Hérault depuis Castelnau-le-Lez</p>
+            
+            <div class="simple-map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.949094106259!2d3.8946610762981178!3d43.6284184540332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x49ed7653702ef0fb%3A0xbca1b54e04fc474a!2zWk9aTyBTw6ljdXJpdMOp!5e0!3m2!1sfr!2sfr!4v1751457570179!5m2!1sfr!2sfr" 
+                        width="100%" 
+                        height="400" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade"
+                        title="ZOZO Sécurité - Installateur Vidéosurveillance Montpellier Hérault - Localisation">
+                </iframe>
+            </div>
+            
+            <div class="map-info" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                <h4>Installateur Vidéosurveillance à Montpellier</h4>
+                <p><strong itemprop="name">ZOZO Sécurité</strong></p>
+                <p itemprop="streetAddress">1 place Charles de Gaulle</p>
+                <p><span itemprop="postalCode">34170</span> <span itemprop="addressLocality">Castelnau-le-Lez</span></p>
+                <p itemprop="addressRegion">Hérault</p>
             </div>
         </div>
     </section>
