--- a/services/installateur-videosurveillance-entrepots-montpellier.html
+++ b/services/installateur-videosurveillance-entrepots-montpellier.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="../css/videosurveillance.css">
     <link rel="stylesheet" href="../css/entrepot.css">
     <link rel="stylesheet" href="../css/faq.css">
-    <link rel="stylesheet" href="../css/contact.css"> 
+    <link rel="stylesheet" href="../css/contact.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
     <!-- Favicon -->
     <link rel="icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
@@ -326,17 +328,25 @@
 
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
-        <a href="../index.html#services" class="nav-link">Services</a>
+        <div class="mobile-dropdown">
+            <button class="nav-link mobile-dropdown-toggle">Services</button>
+            <div class="mobile-dropdown-menu">
+                <a href="videosurveillance.html" class="mobile-dropdown-item">Vidéosurveillance</a>
+                <a href="installateur-videosurveillance-entrepots-montpellier.html" class="mobile-dropdown-item">Surveillance Entrepôts</a>
+            </div>
+        </div>
         <a href="../index.html#video-surveillance" class="nav-link">Expertise</a>
         <a href="../index.html#realisations" class="nav-link">Réalisations</a>
         <a href="../blog.html" class="nav-link">Blog</a>
         <a href="../contact.html" class="nav-link">Contact</a>
-        <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26">
+
+                <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="vertical-align: middle; margin-right: 0.5rem;">
                 <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
             </svg>
             07 67 56 39 26
         </a>
+
         <div class="mobile-contact-form">
             <a href="../contact.html" class="mobile-contact-link" aria-label="Nous contacter">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -358,11 +368,8 @@
                 <li class="breadcrumb-item">
                     <a href="../index.html#services">Services</a>
                 </li>
-                <li class="breadcrumb-item">
-                    <a href="../index.html#video-surveillance">Vidéosurveillance</a>
-                </li>
                 <li class="breadcrumb-item active" aria-current="page">
-                    Entrepôt
+                    Entrepôts
                 </li>
             </ol>
         </div>
@@ -591,8 +598,15 @@
         </div>
     </section>
 
-    <!-- Font Awesome Icons -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+    <!-- Scroll to Top Button -->
+    <button class="scroll-top" aria-label="Retour en haut">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M18 15l-6-6-6 6" />
+        </svg>
+    </button>
+
+    <!-- Main JavaScript -->
+    <script src="../js/main.js"></script>
 
     <!-- Video Autoplay on Scroll -->
     <script>
@@ -659,6 +673,32 @@
                     }
                 });
             }
+        });
+    </script>
+
+    <!-- Dropdown Navigation JavaScript -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Mobile dropdown functionality
+            const mobileDropdown = document.querySelector('.mobile-dropdown');
+            const mobileDropdownToggle = document.querySelector('.mobile-dropdown-toggle');
+            
+            if (mobileDropdownToggle && mobileDropdown) {
+                mobileDropdownToggle.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    mobileDropdown.classList.toggle('active');
+                });
+            }
+            
+            // Close dropdown when clicking on a dropdown item
+            const mobileDropdownItems = document.querySelectorAll('.mobile-dropdown-item');
+            mobileDropdownItems.forEach(item => {
+                item.addEventListener('click', function() {
+                    if (mobileDropdown) {
+                        mobileDropdown.classList.remove('active');
+                    }
+                });
+            });
         });
     </script>
 
