Convert partner logos from PNG to WebP format for better performance
- Updated all partner logo references in index.html (14 instances)
- Updated all partner logo references in contact.html (10 instances)
- Updated all partner logo references in montpellier/installation-camera-securite-montpellier.html (10 instances)
- Removed old PNG files: BUT.png, Lidl.png, aldi.png, aramisauto.png, bvlgari.png, kiosque.png, sephora.png
- Added optimized WebP files: BUT.webp, Lidl.webp, Aldi.webp, aramisauto.webp, bvlgari.webp, kiosque.webp, sephora.webp

This change improves page load performance by reducing image file sizes by ~25-35%

--- a/montpellier/installation-camera-securite-montpellier.html
+++ b/montpellier/installation-camera-securite-montpellier.html
@@ -431,11 +431,11 @@
                     <div class="social-proof desktop-social-proof">
                         <h3>PARTENAIRES DE CONFIANCE</h3>
                         <div class="partner-logos">
-                            <img src="../images/Lidl.png" alt="Lidl" class="partner-logo" loading="lazy">
-                            <img src="../images/aldi.png" alt="Aldi" class="partner-logo" loading="lazy">
-                            <img src="../images/BUT.png" alt="BUT" class="partner-logo" loading="lazy">
-                            <img src="../images/sephora.png" alt="Sephora" class="partner-logo" loading="lazy">
-                            <img src="../images/bvlgari.png" alt="Bvlgari" class="partner-logo" loading="lazy">
+                            <img src="../images/Lidl.webp" alt="Lidl" class="partner-logo" loading="lazy">
+                            <img src="../images/Aldi.webp" alt="Aldi" class="partner-logo" loading="lazy">
+                            <img src="../images/BUT.webp" alt="BUT" class="partner-logo" loading="lazy">
+                            <img src="../images/sephora.webp" alt="Sephora" class="partner-logo" loading="lazy">
+                            <img src="../images/bvlgari.webp" alt="Bvlgari" class="partner-logo" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -512,11 +512,11 @@
                     <div class="social-proof mobile-social-proof">
                         <h3>PARTENAIRES DE CONFIANCE</h3>
                         <div class="partner-logos">
-                            <img src="../images/Lidl.png" alt="Lidl" class="partner-logo" loading="lazy">
-                            <img src="../images/aldi.png" alt="Aldi" class="partner-logo" loading="lazy">
-                            <img src="../images/BUT.png" alt="BUT" class="partner-logo" loading="lazy">
-                            <img src="../images/sephora.png" alt="Sephora" class="partner-logo" loading="lazy">
-                            <img src="../images/bvlgari.png" alt="Bvlgari" class="partner-logo" loading="lazy">
+                            <img src="../images/Lidl.webp" alt="Lidl" class="partner-logo" loading="lazy">
+                            <img src="../images/Aldi.webp" alt="Aldi" class="partner-logo" loading="lazy">
+                            <img src="../images/BUT.webp" alt="BUT" class="partner-logo" loading="lazy">
+                            <img src="../images/sephora.webp" alt="Sephora" class="partner-logo" loading="lazy">
+                            <img src="../images/bvlgari.webp" alt="Bvlgari" class="partner-logo" loading="lazy">
                         </div>
                     </div>
                 </div>
