--- a/videosurveillance-montpellier-cameras-securite.html
+++ b/videosurveillance-montpellier-cameras-securite.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#1a1a1a">
-    <link rel="canonical" href="https://www.zozosecurite.fr/index.html">
+    <link rel="canonical" href="https://www.zozosecurite.fr/videosurveillance-montpellier-cameras-securite.html">
     
     <!-- Preload critical resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
