took off the pop up offer

--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
     <div class="cursor-dot"></div>
 
     <!-- Logo -->
-    <a href="videosurveillance-montpellier-cameras-securite.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
+    <a href="index.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
         <div class="logo-text">
             <span class="logo-zozo">ZOZO</span>
             <span class="logo-securite">SÉCURITÉ</span>
@@ -157,8 +157,8 @@
     <nav class="desktop-nav">
         <div class="nav-container">
             <div class="nav-links">
-                <a href="videosurveillance-montpellier-cameras-securite.html" class="nav-link">ACCUEIL</a>
-                <a href="videosurveillance-montpellier-cameras-securite.html#realisations" class="nav-link">Réalisations</a>
+                <a href="index.html" class="nav-link">ACCUEIL</a>
+                <a href="index.html#realisations" class="nav-link">Réalisations</a>
                 <a href="blog.html" class="nav-link">Blog</a>
                 <a href="contact.html" class="nav-link active">Contact</a>
             </div>
@@ -193,8 +193,8 @@
     
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
-        <a href="videosurveillance-montpellier-cameras-securite.html" class="nav-link">ACCUEIL</a>
-        <a href="videosurveillance-montpellier-cameras-securite.html#realisations" class="nav-link">Réalisations</a>
+        <a href="index.html" class="nav-link">ACCUEIL</a>
+        <a href="index.html#realisations" class="nav-link">Réalisations</a>
         <a href="blog.html" class="nav-link">Blog</a>
         <a href="contact.html" class="nav-link active">Contact</a>
         
@@ -221,7 +221,7 @@
         <div class="breadcrumb-container">
             <ol class="breadcrumb-list">
                 <li class="breadcrumb-item">
-                    <a href="videosurveillance-montpellier-cameras-securite.html">Accueil</a>
+                    <a href="index.html">Accueil</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">
                     Contact
@@ -543,7 +543,7 @@
             <a href="mentions-legales.html">Mentions Légales</a> |
             <a href="politique-confidentialite.html">Politique de Confidentialité</a> |
             <a href="faq.html">FAQ</a> |
-            <a href="videosurveillance-montpellier-cameras-securite.html">Accueil</a>
+            <a href="index.html">Accueil</a>
         </p>
     </footer>
 
