--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -79,7 +79,7 @@
         <p>Le traitement de vos données à caractère personnel est régi par notre Politique de Confidentialité, disponible <a href="politique-confidentialite.html">ici</a>, conformément au Règlement Général sur la Protection des Données (RGPD) 2016/679 du 27 avril 2016.</p>
 
         <div style="text-align: center; margin-top: 30px;">
-            <a href="videosurveillance-montpellier-cameras-securite.html" class="back-button">Retour à l'accueil</a>
+            <a href="index.html" class="back-button">Retour à l'accueil</a>
         </div>
     </div>
 </body>
