--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -120,7 +120,7 @@
         <p>Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Les modifications prendront effet immédiatement après leur publication sur le site Web. Nous vous encourageons à consulter régulièrement cette page pour prendre connaissance des éventuelles modifications.</p>
 
         <div style="text-align: center; margin-top: 30px;">
-            <a href="videosurveillance-montpellier-cameras-securite.html" class="back-button">Retour à l'accueil</a>
+            <a href="index.html" class="back-button">Retour à l'accueil</a>
         </div>
     </div>
 </body>
