--- a/services/installateur-videosurveillance-entrepots-montpellier.html
+++ b/services/installateur-videosurveillance-entrepots-montpellier.html
@@ -280,7 +280,7 @@
     <div class="cursor-dot"></div>
 
     <!-- Logo -->
-    <a href="../videosurveillance-montpellier-cameras-securite.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
+    <a href="../index.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
         <div class="logo-text">
             <span class="logo-zozo">ZOZO</span>
             <span class="logo-securite">SÉCURITÉ</span>
@@ -291,9 +291,9 @@
     <nav class="desktop-nav">
         <div class="nav-container">
             <div class="nav-links">
-                <a href="../videosurveillance-montpellier-cameras-securite.html#services" class="nav-link">Services</a>
-                <a href="../videosurveillance-montpellier-cameras-securite.html#video-surveillance" class="nav-link">Expertise</a>
-                <a href="../videosurveillance-montpellier-cameras-securite.html#realisations" class="nav-link">Réalisations</a>
+                <a href="../index.html#services" class="nav-link">Services</a>
+                <a href="../index.html#video-surveillance" class="nav-link">Expertise</a>
+                <a href="../index.html#realisations" class="nav-link">Réalisations</a>
                 <a href="../blog.html" class="nav-link">Blog</a>
                 <a href="../contact.html" class="nav-link">Contact</a>
             </div>
@@ -335,8 +335,8 @@
                 <a href="installateur-videosurveillance-entrepots-montpellier.html" class="mobile-dropdown-item">Surveillance Entrepôts</a>
             </div>
         </div>
-        <a href="../videosurveillance-montpellier-cameras-securite.html#video-surveillance" class="nav-link">Expertise</a>
-        <a href="../videosurveillance-montpellier-cameras-securite.html#realisations" class="nav-link">Réalisations</a>
+        <a href="../index.html#video-surveillance" class="nav-link">Expertise</a>
+        <a href="../index.html#realisations" class="nav-link">Réalisations</a>
         <a href="../blog.html" class="nav-link">Blog</a>
         <a href="../contact.html" class="nav-link">Contact</a>
 
@@ -363,10 +363,10 @@
         <div class="breadcrumb-container">
             <ol class="breadcrumb-list">
                 <li class="breadcrumb-item">
-                    <a href="../videosurveillance-montpellier-cameras-securite.html">Accueil</a>
+                    <a href="../index.html">Accueil</a>
                 </li>
                 <li class="breadcrumb-item">
-                    <a href="../videosurveillance-montpellier-cameras-securite.html#services">Services</a>
+                    <a href="../index.html#services">Services</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">
                     Entrepôts
