--- a/blog.html
+++ b/blog.html
@@ -194,7 +194,7 @@
 <body>
 
     <!-- Logo -->
-    <a href="videosurveillance-montpellier-cameras-securite.html" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
+    <a href="index.html" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
         <div class="logo-text">
             <span class="logo-zozo">ZOZO</span>
             <span class="logo-securite">SÉCURITÉ</span>
@@ -205,8 +205,8 @@
     <nav class="desktop-nav">
         <div class="nav-container">
             <div class="nav-links">
-                <a href="videosurveillance-montpellier-cameras-securite.html" class="nav-link">ACCUEIL</a>
-                <a href="videosurveillance-montpellier-cameras-securite.html#realisations" class="nav-link">Réalisations</a>
+                <a href="index.html" class="nav-link">ACCUEIL</a>
+                <a href="index.html#realisations" class="nav-link">Réalisations</a>
                 <a href="blog.html" class="nav-link active">Blog</a>
                 <a href="contact.html" class="nav-link">Contact</a>
             </div>
@@ -241,8 +241,8 @@
 
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
-        <a href="videosurveillance-montpellier-cameras-securite.html" class="nav-link">ACCUEIL</a>
-        <a href="videosurveillance-montpellier-cameras-securite.html#realisations" class="nav-link">Réalisations</a>
+        <a href="index.html" class="nav-link">ACCUEIL</a>
+        <a href="index.html#realisations" class="nav-link">Réalisations</a>
         <a href="blog.html" class="nav-link active">Blog</a>
         <a href="contact.html" class="nav-link">Contact</a>
         
@@ -259,7 +259,7 @@
         <div class="breadcrumb-container">
             <ol class="breadcrumb-list">
                 <li class="breadcrumb-item">
-                    <a href="videosurveillance-montpellier-cameras-securite.html">Accueil</a>
+                    <a href="index.html">Accueil</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">
                     Blog
