--- a/faq.html
+++ b/faq.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <!-- Logo -->
-    <a href="videosurveillance-montpellier-cameras-securite.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
+    <a href="index.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
         <div class="logo-text">
             <span class="logo-zozo">ZOZO</span>
             <span class="logo-securite">SÉCURITÉ</span>
@@ -90,9 +90,9 @@
     <nav class="desktop-nav">
         <div class="nav-container">
             <div class="nav-links">
-                <a href="videosurveillance-montpellier-cameras-securite.html#services" class="nav-link">Services</a>
-                <a href="videosurveillance-montpellier-cameras-securite.html#video-surveillance" class="nav-link">Expertise</a>
-                <a href="videosurveillance-montpellier-cameras-securite.html#realisations" class="nav-link">Réalisations</a>
+                <a href="index.html#services" class="nav-link">Services</a>
+                <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
+                <a href="index.html#realisations" class="nav-link">Réalisations</a>
                 <a href="blog.html" class="nav-link">Blog</a>
                 <a href="contact.html" class="nav-link">Contact</a>
             </div>
@@ -127,9 +127,9 @@
     
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
-        <a href="videosurveillance-montpellier-cameras-securite.html#services" class="nav-link">Services</a>
-        <a href="videosurveillance-montpellier-cameras-securite.html#video-surveillance" class="nav-link">Expertise</a>
-        <a href="videosurveillance-montpellier-cameras-securite.html#realisations" class="nav-link">Réalisations</a>
+        <a href="index.html#services" class="nav-link">Services</a>
+        <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
+        <a href="index.html#realisations" class="nav-link">Réalisations</a>
         <a href="blog.html" class="nav-link">Blog</a>
 
                 <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26">
@@ -155,7 +155,7 @@
         <div class="breadcrumb-container">
             <ol class="breadcrumb-list">
                 <li class="breadcrumb-item">
-                    <a href="videosurveillance-montpellier-cameras-securite.html">Accueil</a>
+                    <a href="index.html">Accueil</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">
                     FAQ
@@ -260,7 +260,7 @@
     </main>
 
     <footer class="site-footer">
-        <p>&copy; 2025 Zozo Sécurité • <a href="videosurveillance-montpellier-cameras-securite.html">Accueil</a></p>
+        <p>&copy; 2025 Zozo Sécurité • <a href="index.html">Accueil</a></p>
     </footer>
 
     <script src="js/main.js"></script> 
