--- a/montpellier/installation-camera-securite-montpellier.html
+++ b/montpellier/installation-camera-securite-montpellier.html
@@ -274,7 +274,7 @@
     <div class="cursor-dot"></div>
 
     <!-- Logo -->
-    <a href="../videosurveillance-montpellier-cameras-securite.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
+    <a href="../index.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
         <div class="logo-text">
             <span class="logo-zozo">ZOZO</span>
             <span class="logo-securite">SÉCURITÉ</span>
@@ -285,9 +285,9 @@
     <nav class="desktop-nav">
         <div class="nav-container">
             <div class="nav-links">
-                <a href="../videosurveillance-montpellier-cameras-securite.html#services" class="nav-link">Services</a>
-                <a href="../videosurveillance-montpellier-cameras-securite.html#video-surveillance" class="nav-link">Expertise</a>
-                <a href="../videosurveillance-montpellier-cameras-securite.html#realisations" class="nav-link">Réalisations</a>
+                <a href="../index.html#services" class="nav-link">Services</a>
+                <a href="../index.html#video-surveillance" class="nav-link">Expertise</a>
+                <a href="../index.html#realisations" class="nav-link">Réalisations</a>
                 <a href="../blog.html" class="nav-link">Blog</a>
                 <a href="../contact.html" class="nav-link">Contact</a>
             </div>
@@ -322,9 +322,9 @@
 
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
-        <a href="../videosurveillance-montpellier-cameras-securite.html#services" class="nav-link">Services</a>
-        <a href="../videosurveillance-montpellier-cameras-securite.html#video-surveillance" class="nav-link">Expertise</a>
-        <a href="../videosurveillance-montpellier-cameras-securite.html#realisations" class="nav-link">Réalisations</a>
+        <a href="../index.html#services" class="nav-link">Services</a>
+        <a href="../index.html#video-surveillance" class="nav-link">Expertise</a>
+        <a href="../index.html#realisations" class="nav-link">Réalisations</a>
         <a href="../blog.html" class="nav-link">Blog</a>
         <a href="../contact.html" class="nav-link">Contact</a>
         <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26">
