Convert Hikvision logo from PNG to WebP format
- Updated index.html: Changed Hikvision.png to Hikvision.webp in brands section
- Updated services/videosurveillance.html: Changed Hikvision.png to Hikvision.webp in partners section
- Added optimized Hikvision.webp file for better performance

This change improves page load performance by reducing image file size

--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -377,7 +377,7 @@
                     <h3>Partenaires Privilégiés</h3>
                     <div class="partners-grid">
                         <div class="partner-card">
-                            <img src="../images/Hikvision.png" alt="Logo Hikvision" class="partner-logo" loading="lazy">
+                            <img src="../images/Hikvision.webp" alt="Logo Hikvision" class="partner-logo" loading="lazy">
                             <div class="partner-info">
                                 <h4>Hikvision</h4>
                                 <p>Analytics intelligentes à prix volume</p>
