--- a/index.html
+++ b/index.html
@@ -532,11 +532,11 @@
                 <h3>Nos Partenaires</h3>
                 <div class="brands-grid">
                     <div class="brand-card">
-                        <img src="images/Hikvision.webp" alt="Logo Hikvision" class="brand-logo brand-logo-hikvision" loading="lazy" width="130" height="85">
+                        <img src="images/Hikvision.webp" alt="Logo Hikvision" class="brand-logo" loading="lazy" width="130" height="85">
                         <span>Hikvision</span>
                     </div>
                     <div class="brand-card">
-                        <img src="images/Dahua.svg" alt="Logo Dahua" class="brand-logo" loading="lazy" width="90" height="60">
+                        <img src="images/Dahua.svg" alt="Logo Dahua" class="brand-logo" loading="lazy" width="130" height="85">
                         <span>Dahua</span>
                     </div>
                 </div>
