--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
 
     <!-- Logo -->
-    <a href="#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
+    <a href="#accueil" class="site-logo">
         <div class="logo-text">
             <span class="logo-zozo">ZOZO</span>
             <span class="logo-securite">SÉCURITÉ</span>
