--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Contact - Zozo Sécurité | Vidéosurveillance Montpellier</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://www.zozosecurite.fr/contact.html">
+    <link rel="canonical" href="https://zozosecurite.fr/contact.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1">
     <link rel="stylesheet" href="css/navigation.css?v=2.1">
     <link rel="stylesheet" href="css/contact.css?v=1.0">
@@ -33,7 +33,7 @@
     <meta property="og:title" content="Contact - Zozo Sécurité | Vidéosurveillance Montpellier">
     <meta property="og:description" content="Contactez notre équipe d'experts en sécurité pour votre projet de vidéosurveillance. Devis gratuit et personnalisé.">
     <meta property="og:image" content="images/zozosécuritélogo.webp">
-    <meta property="og:url" content="https://www.zozosecurite.fr/contact.html">
+    <meta property="og:url" content="https://zozosecurite.fr/contact.html">
     <meta property="og:type" content="website">
     
     <!-- Google tag (gtag.js) -->
@@ -67,13 +67,13 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Accueil",
-          "item": "https://www.zozosecurite.fr/"
+          "item": "https://zozosecurite.fr/"
         },
         {
           "@type": "ListItem",
           "position": 2,
           "name": "Contact",
-          "item": "https://www.zozosecurite.fr/contact.html"
+          "item": "https://zozosecurite.fr/contact.html"
         }
       ]
     }
@@ -89,7 +89,7 @@
         "description": "Spécialiste en installation de systèmes de vidéosurveillance, câblage et baies réseau à Montpellier",
         "telephone": "+33767563926",
         "email": "contact@zozosecurite.fr",
-        "url": "https://www.zozosecurite.fr",
+        "url": "https://zozosecurite.fr",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "1 place charles de gaulle",
@@ -301,7 +301,7 @@
              <div class="split-right">
                  <div class="original-form-container">
                      <form id="secure-contact-form" action="https://formspree.io/f/mblojdjg" method="POST" class="original-contact-form">
-                         <input type="hidden" name="_next" value="https://www.zozosecurite.fr/thank-you.html">
+                         <input type="hidden" name="_next" value="https://zozosecurite.fr/thank-you.html">
                          
                          <div class="form-row">
                              <div class="form-group half-width">
