--- a/montpellier/installation-camera-securite-montpellier.html
+++ b/montpellier/installation-camera-securite-montpellier.html
@@ -5,7 +5,7 @@
     <title>Installation Vidéosurveillance Montpellier | ZOZO Sécurité - Devis Gratuit</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://www.zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html">
+    <link rel="canonical" href="https://zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html">
     <link rel="stylesheet" href="../css/styles.css?v=2.1">
     <link rel="stylesheet" href="../css/navigation.css?v=2.0">
     <link rel="stylesheet" href="montpellier.css">
@@ -34,7 +34,7 @@
     <meta property="og:title" content="Installation Vidéosurveillance Montpellier | ZOZO Sécurité">
     <meta property="og:description" content="Expert en installation de systèmes de vidéosurveillance à Montpellier. Devis gratuit et intervention rapide.">
     <meta property="og:image" content="../images/og-image.webp">
-    <meta property="og:url" content="https://www.zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html">
+    <meta property="og:url" content="https://zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html">
     <meta property="og:type" content="website">
     
     <!-- Google tag (gtag.js) -->
@@ -55,12 +55,12 @@
     {
       "@context": "https://schema.org",
       "@type": "Service",
-      "@id": "https://www.zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html",
+      "@id": "https://zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html",
       "name": "Installation Vidéosurveillance Montpellier",
       "description": "Installation complète de systèmes de vidéosurveillance à Montpellier : caméras IP 4K, surveillance 24/7, détection intelligente, accès distant. Devis gratuit et intervention rapide.",
       "provider": {
         "@type": "LocalBusiness",
-        "@id": "https://www.zozosecurite.fr#organization",
+        "@id": "https://zozosecurite.fr#organization",
         "name": "ZOZO Sécurité",
         "telephone": "+33767563926",
         "address": {
@@ -112,7 +112,7 @@
       "description": "Spécialiste en installation de systèmes de vidéosurveillance à Montpellier et sa métropole",
       "telephone": "+33767563926",
       "email": "contact@zozosecurite.fr",
-      "url": "https://www.zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html",
+      "url": "https://zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "1 place charles de gaulle",
@@ -133,8 +133,8 @@
       "openingHours": "Mo-Fr 08:00-18:00",
       "priceRange": "€€",
       "image": [
-        "https://www.zozosecurite.fr/images/og-image.webp",
-        "https://www.zozosecurite.fr/images/zozosécuritélogo.ico"
+        "https://zozosecurite.fr/images/og-image.webp",
+        "https://zozosecurite.fr/images/zozosécuritélogo.ico"
       ],
       "geo": {
         "@type": "GeoCoordinates",
@@ -184,25 +184,25 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Accueil",
-          "item": "https://www.zozosecurite.fr/"
+          "item": "https://zozosecurite.fr/"
         },
         {
           "@type": "ListItem",
           "position": 2,
           "name": "Services",
-          "item": "https://www.zozosecurite.fr/#services"
+          "item": "https://zozosecurite.fr/#services"
         },
         {
           "@type": "ListItem",
           "position": 3,
           "name": "Montpellier",
-          "item": "https://www.zozosecurite.fr/montpellier/"
+          "item": "https://zozosecurite.fr/montpellier/"
         },
         {
           "@type": "ListItem",
           "position": 4,
           "name": "Vidéosurveillance",
-          "item": "https://www.zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html"
+          "item": "https://zozosecurite.fr/montpellier/installation-camera-securite-montpellier.html"
         }
       ]
     }
@@ -445,7 +445,7 @@
             <div class="split-right">
                 <div class="original-form-container">
                     <form id="secure-contact-form" action="https://formspree.io/f/mblojdjg" method="POST" class="original-contact-form">
-                        <input type="hidden" name="_next" value="https://www.zozosecurite.fr/thank-you.html">
+                        <input type="hidden" name="_next" value="https://zozosecurite.fr/thank-you.html">
                         <input type="hidden" name="source" value="videosurveillance-montpellier">
                         
                         <div class="form-row">
