--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politique de Confidentialité - Zozo Sécurité</title>
     <meta name="description" content="Découvrez comment Zozo Sécurité collecte, utilise et protège vos données personnelles. Informations conformes au RGPD.">
-    <link rel="canonical" href="https://www.zozosecurite.fr/politique-confidentialite.html">
+    <link rel="canonical" href="https://zozosecurite.fr/politique-confidentialite.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1"> <!-- Link to your main CSS -->
     <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
@@ -50,7 +50,7 @@
         <h1>Politique de Confidentialité</h1>
         <p>Date de dernière mise à jour : 4 Mai 2025</p>
 
-        <p>La présente Politique de Confidentialité décrit la manière dont Zozo Sécurité (représenté par Mir mohammadi azghandi seyed ahmad, SIRET 917 897 555 00020) collecte, utilise et protège les informations personnelles que vous nous fournissez lorsque vous utilisez notre site web www.zozosecurite.fr.</p>
+        <p>La présente Politique de Confidentialité décrit la manière dont Zozo Sécurité (représenté par Mir mohammadi azghandi seyed ahmad, SIRET 917 897 555 00020) collecte, utilise et protège les informations personnelles que vous nous fournissez lorsque vous utilisez notre site web zozosecurite.fr.</p>
          <em>(Note: L'affichage du nom complet de l'entrepreneur individuel est légalement requis pour identifier le responsable de traitement.)</em>
 
         <h2>1. Collecte de l’information</h2>
