--- a/services/installateur-videosurveillance-entrepots-montpellier.html
+++ b/services/installateur-videosurveillance-entrepots-montpellier.html
@@ -5,7 +5,7 @@
     <title>Installation Vidéosurveillance Entrepôt – Solutions Professionnelles ZOZO Sécurité</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://www.zozosecurite.fr/services/installateur-videosurveillance-entrepots-montpellier.html">
+    <link rel="canonical" href="https://zozosecurite.fr/services/installateur-videosurveillance-entrepots-montpellier.html">
     <link rel="stylesheet" href="../css/styles.css?v=2.1">
     <link rel="stylesheet" href="../css/navigation.css?v=2.0">
     <link rel="stylesheet" href="../css/videosurveillance.css">
@@ -52,12 +52,12 @@
     {
       "@context": "https://schema.org",
       "@type": "Service",
-      "@id": "https://www.zozosecurite.fr/services/installateur-videosurveillance-entrepots-montpellier.html",
+      "@id": "https://zozosecurite.fr/services/installateur-videosurveillance-entrepots-montpellier.html",
       "name": "Installation Vidéosurveillance Entrepôt",
       "description": "Installation complète de systèmes de vidéosurveillance pour entrepôts : caméras IP 4K, détection intelligente, surveillance 24/7 pour sécuriser vos espaces logistiques et de stockage.",
       "provider": {
         "@type": "LocalBusiness",
-        "@id": "https://www.zozosecurite.fr#organization",
+        "@id": "https://zozosecurite.fr#organization",
         "name": "ZOZO Sécurité",
         "telephone": "+33767563926",
         "address": {
@@ -248,25 +248,25 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Accueil",
-          "item": "https://www.zozosecurite.fr/"
+          "item": "https://zozosecurite.fr/"
         },
         {
           "@type": "ListItem",
           "position": 2,
           "name": "Services",
-          "item": "https://www.zozosecurite.fr/#services"
+          "item": "https://zozosecurite.fr/#services"
         },
         {
           "@type": "ListItem",
           "position": 3,
           "name": "Vidéosurveillance",
-          "item": "https://www.zozosecurite.fr/#video-surveillance"
+          "item": "https://zozosecurite.fr/#video-surveillance"
         },
         {
           "@type": "ListItem",
           "position": 4,
           "name": "Entrepôt",
-          "item": "https://www.zozosecurite.fr/services/installateur-videosurveillance-entrepots-montpellier.html"
+          "item": "https://zozosecurite.fr/services/installateur-videosurveillance-entrepots-montpellier.html"
         }
       ]
     }
