--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -5,7 +5,7 @@
     <title>Installation Vidéosurveillance Professionnelle – Expertise ZOZO Sécurité</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://www.zozosecurite.fr/services/videosurveillance.html">
+    <link rel="canonical" href="https://zozosecurite.fr/services/videosurveillance.html">
     <link rel="stylesheet" href="../css/styles.css?v=2.1">
     <link rel="stylesheet" href="../css/navigation.css?v=2.0">
     <link rel="stylesheet" href="../css/videosurveillance.css"> 
@@ -47,12 +47,12 @@
     {
       "@context": "https://schema.org",
       "@type": "Service",
-      "@id": "https://www.zozosecurite.fr/services/videosurveillance.html",
+      "@id": "https://zozosecurite.fr/services/videosurveillance.html",
       "name": "Installation Vidéosurveillance Professionnelle",
       "description": "Installation complète de systèmes de vidéosurveillance : caméras IP 4K, DVR/NVR, intelligence artificielle, détection thermique pour commerces et résidences dans l'Hérault.",
       "provider": {
         "@type": "LocalBusiness",
-        "@id": "https://www.zozosecurite.fr#organization",
+        "@id": "https://zozosecurite.fr#organization",
         "name": "ZOZO Sécurité",
         "telephone": "+33767563926",
         "address": {
