--- a/faq.html
+++ b/faq.html
@@ -15,7 +15,7 @@
     <meta name="geo.placename" content="Castelnau-le-Lez, France">
     <!-- Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
-    <link rel="canonical" href="https://www.zozosecurite.fr/faq.html">
+    <link rel="canonical" href="https://zozosecurite.fr/faq.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1">
     <link rel="stylesheet" href="css/navigation.css?v=2.0">
     <link rel="stylesheet" href="css/faq.css?v=1.0">
@@ -46,13 +46,13 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Accueil",
-          "item": "https://www.zozosecurite.fr/"
+          "item": "https://zozosecurite.fr/"
         },
         {
           "@type": "ListItem",
           "position": 2,
           "name": "FAQ",
-          "item": "https://www.zozosecurite.fr/faq.html"
+          "item": "https://zozosecurite.fr/faq.html"
         }
       ]
     }
