--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mentions Légales - Zozo Sécurité</title>
     <meta name="description" content="Consultez les mentions légales de Zozo Sécurité, incluant les informations sur l'éditeur du site, l'hébergement et la direction de la publication.">
-    <link rel="canonical" href="https://www.zozosecurite.fr/mentions-legales.html">
+    <link rel="canonical" href="https://zozosecurite.fr/mentions-legales.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1"> <!-- Link to your main CSS -->
     <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
@@ -48,10 +48,10 @@
     <div class="content">
         <h1>Mentions Légales</h1>
 
-        <p>Conformément aux dispositions de la loi n° 2004-575 du 21 juin 2004 pour la confiance en l'économie numérique, il est précisé aux utilisateurs du site www.zozosecurite.fr l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi.</p>
+        <p>Conformément aux dispositions de la loi n° 2004-575 du 21 juin 2004 pour la confiance en l'économie numérique, il est précisé aux utilisateurs du site zozosecurite.fr l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi.</p>
 
         <h2>Édition du site</h2>
-        <p>Le présent site, accessible à l’URL www.zozosecurite.fr, est édité par :</p>
+        <p>Le présent site, accessible à l’URL zozosecurite.fr, est édité par :</p>
         <p>
             <strong>Mir mohammadi azghandi seyed ahmad</strong>, entrepreneur individuel, exerçant sous le nom commercial "Zozo Sécurité",<br>
             dont le siège social est situé au 1 place Charles de Gaulle, 34170 Castelnau-le-Lez, France,<br>
