--- a/montpellier/installation-camera-securite-montpellier.html
+++ b/montpellier/installation-camera-securite-montpellier.html
@@ -640,8 +640,7 @@
         </div>
     </section>
 
-    <!-- Font Awesome Icons -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+    <!-- Font Awesome removed - no icons used on this page -->
 
     <!-- Contact Form JavaScript -->
     <script src="../js/main.js"></script>
