--- a/blog.html
+++ b/blog.html
@@ -30,8 +30,16 @@
     <link rel="stylesheet" href="css/navigation.css?v=2.1">
     <link rel="stylesheet" href="css/blog.css?v=1.1">
 
-    <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Optimized inline SVG icons (replaces Font Awesome for better performance) -->
+    <style>
+        .icon {
+            display: inline-block;
+            width: 1em;
+            height: 1em;
+            vertical-align: middle;
+            fill: currentColor;
+        }
+    </style>
     
     <!-- Favicon -->
     <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
