--- a/index.html
+++ b/index.html
@@ -348,11 +348,7 @@
             <h1 class="hero-title">Installation <span class="highlight-word">Vidéosurveillance</span> Montpellier - Expert <span class="highlight-word">Caméras Sécurité</span> Hérault</h1>
             <p class="hero-subtitle">Protection vidéo complète pour votre maison ou entreprise. <strong>Plus de 500 clients protégés</strong>. Devis gratuit sous <span class="highlight-montpellier">24h</span>.</p>
             <div class="cta-buttons">
-                <a href="contact.html" class="main-cta">Demander un devis gratuit →</a>
-                <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1uq3XNldlVkIyqdP6nE6Mrkbk6dAyTAFl6qYp4KJct5G0GeK5HQbD-UEY5NrWTdkZgklL-wR0W?gv=true" 
-                   target="_blank" 
-                   rel="noopener" 
-                   class="schedule-button">Réserver un rendez-vous →</a>
+                <a href="contact.html#secure-contact-form" class="main-cta">Demander un devis gratuit →</a>
             </div>
         </div>
         <!-- Simple Down Arrow -->
@@ -429,7 +425,7 @@
 
                     <div class="about-cta">
                         <p class="about-promise"><em>"Votre sécurité, notre priorité. Des solutions simples et efficaces pour protéger ce qui compte pour vous."</em></p>
-                        <a href="contact.html" class="about-button">Demander un devis gratuit →</a>
+                        <a href="contact.html#secure-contact-form" class="about-button">Demander un devis gratuit →</a>
                     </div>
                 </div>
 
@@ -496,7 +492,7 @@
                         <span class="feature-item">✓ Support technique inclus</span>
                     </div>
                 </div>
-                <a href="contact.html" class="cta-button">Demander un devis gratuit</a>
+                <a href="contact.html#secure-contact-form" class="cta-button">Demander un devis gratuit</a>
             </div>
         </div>
     </section>
@@ -1615,7 +1611,7 @@
         <a href="#video-surveillance" class="nav-link">Expertise</a>
         <a href="#realisations" class="nav-link">Réalisations</a>
         <a href="blog.html" class="nav-link">Blog</a>
-        <a href="contact.html" class="nav-link">Contact</a>
+        <a href="contact.html#secure-contact-form" class="nav-link">Contact</a>
 
                 <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="vertical-align: middle; margin-right: 0.5rem;">
@@ -1625,7 +1621,7 @@
         </a>
 
         <div class="mobile-contact-form">
-            <a href="contact.html" class="mobile-contact-link" aria-label="Nous contacter">
+            <a href="contact.html#secure-contact-form" class="mobile-contact-link" aria-label="Nous contacter">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
                     <path d="M13 8H7"/>
@@ -1636,11 +1632,15 @@
     </nav>
 
     <!-- Floating CTA Button for Mobile/Laptop -->
-                <a href="tel:+33767563926" class="floating-cta-btn" aria-label="Appeler au 07 67 56 39 26">
+                <a href="contact.html#secure-contact-form" class="floating-cta-btn" aria-label="Demander un devis gratuit">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+            <polyline points="14,2 14,8 20,8"/>
+            <line x1="16" y1="13" x2="8" y2="13"/>
+            <line x1="16" y1="17" x2="8" y2="17"/>
+            <polyline points="10,9 9,9 8,9"/>
         </svg>
-        07 67 56 39 26
+        Demander un devis
     </a>
     
 
@@ -1701,7 +1701,7 @@
                         <li><a href="services/installateur-videosurveillance-entrepots-montpellier.html">Installation Caméras Sécurité</a></li>
                         <li><a href="#services">Systèmes de Surveillance</a></li>
                         <li><a href="#realisations">Maintenance & Réparation</a></li>
-                        <li><a href="contact.html">Devis Gratuit</a></li>
+                        <li><a href="contact.html#secure-contact-form">Devis Gratuit</a></li>
                     </ul>
                 </nav>
             </div>
