--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -123,5 +123,17 @@
             <a href="index.html" class="back-button">Retour à l'accueil</a>
         </div>
     </div>
+
+    <!-- Floating CTA Button for Mobile/Laptop -->
+    <a href="contact.html#secure-contact-form" class="floating-cta-btn" aria-label="Demander un devis gratuit">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+            <polyline points="14,2 14,8 20,8"/>
+            <line x1="16" y1="13" x2="8" y2="13"/>
+            <line x1="16" y1="17" x2="8" y2="17"/>
+            <polyline points="10,9 9,9 8,9"/>
+        </svg>
+        Demander un devis
+    </a>
 </body>
 </html>
