--- a/services/installateur-videosurveillance-entrepots-montpellier.html
+++ b/services/installateur-videosurveillance-entrepots-montpellier.html
@@ -346,7 +346,7 @@
         <a href="../index.html#video-surveillance" class="nav-link">Expertise</a>
         <a href="../index.html#realisations" class="nav-link">Réalisations</a>
         <a href="../blog.html" class="nav-link">Blog</a>
-        <a href="../contact.html" class="nav-link">Contact</a>
+        <a href="../contact.html#secure-contact-form" class="nav-link">Contact</a>
 
                 <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="vertical-align: middle; margin-right: 0.5rem;">
@@ -356,7 +356,7 @@
         </a>
 
         <div class="mobile-contact-form">
-            <a href="../contact.html" class="mobile-contact-link" aria-label="Nous contacter">
+            <a href="../contact.html#secure-contact-form" class="mobile-contact-link" aria-label="Nous contacter">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
                     <path d="M13 8H7"/>
@@ -382,6 +382,18 @@
             </ol>
         </div>
     </nav>
+
+    <!-- Floating CTA Button for Mobile/Laptop -->
+    <a href="../contact.html#secure-contact-form" class="floating-cta-btn" aria-label="Demander un devis gratuit">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+            <polyline points="14,2 14,8 20,8"/>
+            <line x1="16" y1="13" x2="8" y2="13"/>
+            <line x1="16" y1="17" x2="8" y2="17"/>
+            <polyline points="10,9 9,9 8,9"/>
+        </svg>
+        Demander un devis
+    </a>
 
     <!-- Hero Section -->
     <section class="hero" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/entrepots/entrepots.webp'); background-size: cover; background-position: center; background-repeat: no-repeat;">
@@ -709,6 +721,76 @@
             });
         });
     </script>
+
+    <footer class="site-footer" itemscope itemtype="https://schema.org/LocalBusiness">
+        <div class="footer-container">
+            <!-- Company Info Section -->
+            <div class="footer-section">
+                <h3 itemprop="name">ZOZO SÉCURITÉ</h3>
+                <div class="footer-contact">
+                    <p itemprop="description">Installateur de systèmes de vidéosurveillance et sécurité électronique en Occitanie</p>
+                    
+                    <div class="contact-info" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                        <p><span itemprop="addressLocality">Castelnau-le-Lez</span> • <span itemprop="addressRegion">Hérault</span></p>
+                        <p itemprop="telephone">📞 <a href="tel:+33767563926">07 67 56 39 26</a></p>
+                        <p itemprop="email">📧 <a href="mailto:contact@zozosecurite.fr">contact@zozosecurite.fr</a></p>
+                    </div>
+                    
+                    <div class="business-hours" itemprop="openingHours" content="Mo-Fr 09:00-18:00">
+                        <p>⏰ Lundi - Vendredi : 9h-18h</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Services Section -->
+            <div class="footer-section">
+                <h4>Nos Services</h4>
+                <ul class="footer-links">
+                    <li><a href="videosurveillance.html">Installation Vidéosurveillance</a></li>
+                    <li><a href="installateur-videosurveillance-entrepots-montpellier.html">Sécurité Entrepôts</a></li>
+                    <li><a href="../index.html#services">Systèmes d'Alarme</a></li>
+                    <li><a href="../index.html#services">Caméras IP</a></li>
+                    <li><a href="../index.html#services">Maintenance & Support</a></li>
+                </ul>
+            </div>
+
+            <!-- Coverage Area Section -->
+            <div class="footer-section">
+                <h4>Zones d'Intervention</h4>
+                <ul class="footer-links">
+                    <li><a href="../montpellier/installation-camera-securite-montpellier.html">Montpellier</a></li>
+                    <li><a href="../grabels/installation-camera-securite-grabels.html">Grabels</a></li>
+                    <li><a href="../index.html#zone-intervention">Castelnau-le-Lez</a></li>
+                    <li><a href="../index.html#zone-intervention">Lattes</a></li>
+                    <li><a href="../index.html#zone-intervention">Mauguio</a></li>
+                    <li><a href="../index.html#zone-intervention">Saint-Aunès</a></li>
+                </ul>
+            </div>
+
+            <!-- Quick Links Section -->
+            <div class="footer-section">
+                <h4>Liens Utiles</h4>
+                <ul class="footer-links">
+                    <li><a href="../blog.html">Blog Sécurité</a></li>
+                    <li><a href="../faq.html">FAQ</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                    <li><a href="../index.html#realisations">Nos Réalisations</a></li>
+                    <li><a href="../index.html#devis-gratuit">Devis Gratuit</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="footer-container">
+                <p>&copy; 2025 ZOZO SÉCURITÉ - Tous droits réservés</p>
+                <div class="footer-certifications">
+                    <span>🔒 Systèmes certifiés</span>
+                    <span>⚡ Installation rapide</span>
+                    <span>🛡️ Garantie 3 ans</span>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
