--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -495,7 +495,7 @@
             <h3>Prêt à Sécuriser Votre Espace ?</h3>
             <p>Contactez-nous pour une étude personnalisée de vos besoins en vidéosurveillance</p>
             <div class="cta-buttons" style="display: flex; justify-content: center; align-items: center; gap: 1rem;">
-                <a href="../contact.html" class="main-cta">Demander un devis →</a>
+                <a href="../contact.html#secure-contact-form" class="main-cta">Demander un devis →</a>
                 <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1uq3XNldlVkIyqdP6nE6Mrkbk6dAyTAFl6qYp4KJct5G0GeK5HQbD-UEY5NrWTdkZgklL-wR0W?gv=true" target="_blank" rel="noopener" class="schedule-button">Réserver un rendez-vous →</a>
             </div>
         </div>
@@ -534,7 +534,7 @@
         </a>
 
         <div class="mobile-contact-form">
-            <a href="../contact.html" class="mobile-contact-link" aria-label="Nous contacter">
+            <a href="../contact.html#secure-contact-form" class="mobile-contact-link" aria-label="Nous contacter">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
                     <path d="M13 8H7"/>
@@ -545,11 +545,15 @@
     </nav>
 
     <!-- Floating CTA Button for Mobile/Laptop -->
-                <a href="tel:+33767563926" class="floating-cta-btn" aria-label="Appeler au 07 67 56 39 26">
+                <a href="../contact.html#secure-contact-form" class="floating-cta-btn" aria-label="Demander un devis gratuit">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+            <polyline points="14,2 14,8 20,8"/>
+            <line x1="16" y1="13" x2="8" y2="13"/>
+            <line x1="16" y1="17" x2="8" y2="17"/>
+            <polyline points="10,9 9,9 8,9"/>
         </svg>
-        07 67 56 39 26
+        Demander un devis
     </a>
 
     <!-- Scroll to Top Button -->
